fixed the issue of amt logging out NaN, gave a styling to option value for readability

--- a/src/index.scss
+++ b/src/index.scss
@@ -56,14 +56,6 @@ body {
           }
           select {
             border: 1px solid #e9ebf3;
-            .span-flex {
-              display: flex;
-              justify-content: center;
-              flex-direction: row;
-              gap: 40px;
-              width: 100%;
-              color: red;
-            }
           }
         }
       }
